lab1/Test/L1-A-10-22.output
Error Type A at Line 14
Error Type B at Line 15
Error Type A at Line 20
Error Type A at Line 22
Error Type B at Line 36
Error Type A at Line 37
