lab1/Test/L1-A-10-22.cmm
struct IIqAoTpv1k8 {
  int wCxhEdA1NM4Enf ;
  float KMnchUpyIZ ;
}aXF ( ) {
  int Ae3X [ 91987336 ] , FUPYSeBrL = IKKbfd ;
  oqgyZe0JilB9 = gLW6kMQtRad7U8WM && xjBY != mNF5025f2to9n2RslQEs 
    + b [ u || sTh1ElrJv <= PrmN3clSfQ0zP22vMoOk - tju1oLmy2dMCgn 
    / - WgodV ( kmjb5 , ( JU = sI87Q0Vw = FJ9BwY8vk_dN2uRAPrU 
    = nrMKcSvsuT > CxP3rX9FCaCXx - iBWUL2L8LtWqbC ( Nqk2A2ZRsZPR 
    , gULr51NmeWbw2Qr6llUE || OgxdA && O9iezSmzh < - ! 
    RuWM3HXoN59ZJ1sX6QPw [ ikh = nF || F >= nTdaGG == 
    4714099 ] + 686343897.1729962223 ) . LIJrmeqGmPtgOmW_on7 
    ) . IDFxe9 . jmrwpHfiIgM43SfcjGgV / - ! - ! XQdvppvAQ8VHoEfqU 
    ( ) ) * - ! idh61jW8wcjhpemZUvV ] @;
}>= 
struct {
  struct {
    struct qbXUikc QtsZWivE ;
  }KEV4Q ;
}Ei ( $int KHUQrs ) {
}
int xyYhlCasxn2Dvl2pK7_ ~( int KmMgktB6zhKB0t0_RvN 
  , struct qvi8mG395q0fIT0ZXC ZON9g14D9gG5HlLm ) {
  int NCr7xhle8BQRSEYRuZz ;
}
int ;
struct eymhQ2ao3ZJUj6ATd2up b5pOYktuoSEVmjGHJ 
;
int ;
int dbdDxcJpZvhTMz6p4 , jVQ1cMaSE6ivNbAVp 

;
int ;
int EWqN81Zx0pBRSmyRd7_P ( ) {
  if ( tI9RIMVzLmfj )   El1VsHi ;
else   if ( e )   while ( H0q != ) {
    if ( Y )     if '( d4PzMxNU )     bcJCkQGXP0GvkoRsy61 
      ;
else     Je3hS_cyrHA9N3NNp ;

else     if ( ses )     return DwxuwoWPaWAqgEt1iJXJ 
      ;


  }


}
int ;
